# sat-test-bank

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0c8515049be0_add_calibration_runs_and_calibration_.py  61bd2246a118_initial_schema_with_expanded_problem_.py
planning/: ARCHITECT_MANIFEST.md
research/: elo-rating-system-design.md  mathcounts-extraction-report.md  mathcounts-sample-extraction.json  pdf-textbook-extraction.md
scripts/: gemini-extract-national.md  gemini-extract-national.txt  ingest_problems.py  overnight_run.py  overnight_run_parallel.py  overnight_run_robust.py  overnight_run_sequential.py  recompute_scores.py
specs/: GAPS.md  README.md  architecture.md  business.md  constraints.md  data-model.md  extraction-guide.md  extraction-pipeline.md  rating-system.md  taxonomy-atomic.md  taxonomy.md  ux.md
src/: cli.py
src/api/: app.py
src/core/: config.py  database.py
src/extraction/: __main__.py  answer_parser.py  aops_scraper.py  extraction_results.json  format_detector.py  image_extractor.py  parser.py  pipeline.py  question_parser.py
src/models/: __init__.py  enums.py  tables.py
src/services/: aops_scraper.py  glicko2.py  llm_tagger.py  practice.py  skill_tagger.py  taxonomy_loader.py
templates/: dashboard.html  practice_interface.html  student_profile.html
tests/: conftest.py  test_glicko2.py  test_llm_tagger.py  test_practice.py  test_skill_tagger.py  test_taxonomy_loader.py
tests/engine/: test_adaptive.py  test_glicko2.py
(+6 files in other folders)
